# PrototypeSeparableSystems

./: CMakeLists.txt  README.md  compile.sh  makeArchive.sh  plot.py  plotBoxesSamples.py  plotFlat.py
src/: AffineDecomposer.cpp  AffineDecomposer.hpp  BasicIntegrator.cpp  BasicIntegrator.hpp  Binomial.cpp  Binomial.hpp  CMakeLists.txt  ConicalPendulumODE.cpp  ConicalPendulumODE.hpp  ConicalPendulumODE_PD.cpp  ConicalPendulumODE_PD.hpp  Contractor.cpp  Contractor.hpp  DecomposedIntegrator.cpp  DecomposedIntegrator.hpp  Decomposer.cpp  Decomposer.hpp  DubinsCarODE.cpp  DubinsCarODE.hpp  DubinsCarODEbis.cpp  DubinsCarODEbis.hpp  DubinsCarODEnonlinear.cpp  DubinsCarODEnonlinear.hpp  EnclosureComputation.cpp  EnclosureComputation.hpp  Enumeration.cpp  Enumeration.hpp  ExponentialODE.cpp  ExponentialODE.hpp  Integrator.cpp  Integrator.hpp  Interval.cpp  Interval.hpp  Lifter.cpp  Lifter.hpp  MultiPolynomial.cpp  MultiPolynomial.hpp  NonLinearODE.cpp  NonLinearODE.hpp  NullPrinter.cpp  (+34 more)
